--- a/src/main/resources/static/authors.css
+++ b/src/main/resources/static/authors.css
@@ -33,24 +33,14 @@ h2 small {
     letter-spacing: 0.03em;
 }
 .responsive-table .table-row {
-    background-color: #ffffff;
     box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.1);
 }
 .responsive-table .col-1 {
-    flex-basis: 10%;
+    flex: 0 0 100px;
 }
 .responsive-table .col-2 {
-    flex-basis: 40%;
+    flex-basis: 90%;
 }
-.responsive-table .col-3 {
-    flex-basis: 25%;
-}
-.red {
-    background-color: darksalmon;
-}
-.green {
-    background-color: darkkhaki;
-}
-.blue {
+.table-row:nth-child(odd) {
     background-color: lightsteelblue;
 }
